--- a/ayurhelix/index.html
+++ b/ayurhelix/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beyond Bound</title>
+    <meta property="og:image" content="/assets/logo.png" />
+    <meta name="twitter:image" content="/assets/logo.png" />
   </head>
   <body>
     <div id="root"></div>
