--- a/ayurhelix/index.html
+++ b/ayurhelix/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beyond Bound</title>
-    <meta property="og:image" content="/logo.svg" />
-    <meta name="twitter:image" content="/logo.svg" />
+    <meta name="description" content="Beyond Bound where Ayurvedic solutions are asa fast as Allopathy" />
+    <meta property="og:image" content="http://beyondbound.info/logo.svg" />
+    <meta name="twitter:image" content="http://beyondbound.info/logo.svg" />
   </head>
   <body>
     <div id="root"></div>
