--- a/ayurhelix/index.html
+++ b/ayurhelix/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beyond Bound</title>
-    <meta name="description" content="Beyond Bound where Ayurvedic solutions are asa fast as Allopathy" />
+    <meta name="description" content="Beyond Bound where Ayurvedic solutions are as fast as Allopathy" />
     <meta property="og:image" content="http://beyondbound.info/logo.svg" />
     <meta name="twitter:image" content="http://beyondbound.info/logo.svg" />
   </head>
