--- a/ayurhelix/index.html
+++ b/ayurhelix/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beyond Bound</title>
     <meta name="description" content="Beyond Bound where Ayurvedic solutions are as fast as Allopathy" />
-    <meta property="og:image" content="http://beyondbound.info/logo.svg" />
-    <meta name="twitter:image" content="http://beyondbound.info/logo.svg" />
+    <meta property="og:image" content="/assets/12.png" />
+    <meta name="twitter:image" content="/assets/12.png" />
   </head>
   <body>
     <div id="root"></div>
